--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ urls:
       url: /feed.xml
 
 url: "https://patrickwelsh.github.io"
-baseurl: " /"
+baseurl:  /
 paginate: 20
 per_page: 20
 paginate_path: "/page/:num/"
