--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Stack Problems
-description: My Personal Stack Problems
-author: Patrick Welsh (*not really)
-github: https://github.com/agusmakmun
-about: I am freelance developer. Currently doing more in backend, focused in Python and Django.
-disqus_shortname: stackproblems
+title: Student Problems
+description: My Personal Student Problems
+author: Patrick Welsh (*kinda)
+github: https://github.com/patrickwelsh
+about: I am student. I copied this theme.
+disqus_shortname: studentproblems
 google_analytics: UA-XXXXXXXX-Y
 avatar_url: /static/img/avatar.jpg
 
